<?php

namespace App\Models;

// use Illuminate\Contracts\Auth\MustVerifyEmail;
use Illuminate\Database\Eloquent\Factories\HasFactory;
use Illuminate\Foundation\Auth\User as Authenticatable;
use Illuminate\Notifications\Notifiable;
use Laravel\Sanctum\HasApiTokens;

class User extends Authenticatable
{
    use HasApiTokens, HasFactory, Notifiable;

    /**
     * The attributes that are mass assignable.
     *
     * @var array<int, string>
     */
    protected $fillable = [
        'name',
        'nisn',
        'kelas',
        'email',
        'password',
        'role',
        'is_activated',
        'jumlah_peringatan',
    ];

    /**
     * The attributes that should be hidden for serialization.
     *
     * @var array<int, string>
     */
    protected $hidden = [
        'password',
        'remember_token',
    ];

    /**
     * The attributes that should be cast.
     *
     * @var array<string, string>
     */
    protected $casts = [
        'email_verified_at' => 'datetime',
        'password' => 'hashed',
        'is_activated' => 'boolean',
    ];

    /**
     * Cek apakah user adalah Admin
     */
    public function isAdmin(): bool
    {
        return $this->role === 'admin';
    }

    /**
     * Cek apakah user adalah Petugas
     */
    public function isPetugas(): bool
    {
        return $this->role === 'petugas';
    }

    /**
     * Cek apakah user adalah Pengguna (siswa)
     */
    public function isPengguna(): bool
    {
        return $this->role === 'pengguna';
    }

    /**
     * Cek apakah user adalah Guru
     */
    public function isGuru(): bool
    {
        return $this->role === 'guru';
    }

    /**
     * Cek apakah user adalah Pengguna atau Guru (untuk akses peminjaman)
     */
    public function isPeminjam(): bool
    {
        return $this->isPengguna() || $this->isGuru();
    }

    /**
     * Cek apakah user bisa meminjam barang sekali pakai (hanya guru)
     */
    public function canBorrowConsumable(): bool
    {
        return $this->isGuru();
    }

    /**
     * Cek apakah user Admin atau Petugas (bisa approve/kelola peminjaman)
     */
    public function canManage(): bool
    {
        return $this->isAdmin() || $this->isPetugas();
    }

    /**
     * Relasi: User memiliki banyak peminjaman
     */
    public function peminjaman()
    {
        return $this->hasMany(Peminjaman::class);
    }

    /**
     * Relasi: User memiliki banyak pengaduan
     */
    public function pengaduan()
    {
        return $this->hasMany(Pengaduan::class);
    }
}

